@@ -1,4 +1,4 @@
-$Id: History,v 1.32 2002-10-28 18:49:11 vnivanch Exp $
+$Id: History,v 1.33 2002-12-04 14:51:53 vnivanch Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+04 dec 02: V.Ivant (muons-V04-01-02)
+-fix problems in delta-electrons spectrum
 
 28 oct 02: V.Ivant (muons-V04-01-01)
 -fix compilation warnings for STD classes
